--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>REMSpeed</title>
+  <title>REMSpeed inter-dev</title>
 
   <script type="text/javascript">
     var FILE_SIZE = 10000050;
