--- a/index.html
+++ b/index.html
@@ -92,4 +92,6 @@
   <button onclick="startTest(); return false;">Run</button>
   <div id="log"></div>
 </body>
+</footer>
+  inter-dev, 2024, this website is in beta version, inter-dev, learn and innovate™️
 </html>
